[package]
name = "mkcontent"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
cbc = "0.1.2"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
handlebars = "6.3.2"
katex = { version = "0.4.6", default-features = false, features = ["duktape"] }
markdown = "1.0.0"
once_cell = "1.21.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
quick-xml = "0.37.5"
rand_core = { version = "0.9.3", features = ["std", "os_rng"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
syntect = "5.2.0"
time = { version = "0.3.41", features = ["formatting", "parsing", "serde"] }
toml = "0.8.22"
